# guidra-llm-enhancer

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  coverage.toml  decomp_clarifier_editable_bootstrap.pth  decomp_clarifier_editable_bootstrap.py  mypy.ini  noxfile.py  pipeline_run.md  plan_benchmark_table.md  pyproject.toml  ruff.toml  run_headless_analysis.command  windows_cuda_validated.md
.claude/: settings.local.json
artifacts/reports/: sample_comparison_report_20260427.json  sample_comparison_report_20260427.md  sample_comparison_report_20260428_seed20260428.json  sample_comparison_report_20260428_seed20260428.md  sample_comparison_report_20260428_seed20260429.json  sample_comparison_report_20260428_seed20260429.md  sft_vs_best_grpo_summary_20260427.json  sft_vs_best_grpo_summary_20260427.md
configs/app/: default.yaml  mac.yaml  windows.yaml
configs/compile/: clang_o0.yaml  clang_o2_eval.yaml
configs/dataset/: eval.yaml  rl.yaml  sft.yaml
configs/generation/: default.yaml  medium.yaml  small.yaml
configs/ghidra/: default.yaml  export_all.yaml
configs/prompts/: function_cleanup.md  project_generation.md  readability_judge.md  rename_only.md
configs/training/: grpo_gemma4_e2b_it.yaml  grpo_gemma4_e4b_it.yaml  grpo_qwen35_2b.yaml  grpo_qwen35_2b_12gb.yaml  grpo_qwen35_2b_12gb_1000.yaml  grpo_qwen35_2b_champion_300.yaml  grpo_qwen35_2b_champion_300_g19.yaml  grpo_qwen35_2b_champion_300_g6.yaml  grpo_qwen35_2b_gdpo_300.yaml  grpo_qwen35_2b_guarded_pilot.yaml  grpo_qwen35_2b_invalid_scope_300.yaml  grpo_qwen35_2b_pilot.yaml  grpo_qwen35_2b_raw_guarded_pilot.yaml  grpo_qwen35_4b.yaml  grpo_qwen35_4b_12gb.yaml  grpo_qwen35_4b_12gb_1000.yaml  sft_gemma4_e2b_it.yaml  sft_gemma4_e4b_it.yaml  sft_qwen35_2b.yaml  sft_qwen35_2b_12gb.yaml  sft_qwen35_4b.yaml  sft_qwen35_4b_12gb.yaml  sft_qwen35_4b_12gb_1000.yaml  windows_cuda_16gb.yaml  windows_cuda_24gb.yaml  windows_cuda_48gb.yaml
ghidra/scripts/: ExportCallGraph.py  ExportFunctions.java  ExportFunctions.py  ExportProjectManifest.py  ExportStrings.py
ghidra/templates/: README.md
research/legacy/: README.md  grpo_screening_20260414.md  pipeline_run.md
scripts/: bootstrap.ps1  bootstrap.sh  build_model_matrix_summary.py  build_sample_comparison_report.py  build_target_comparison_table.py  diagnose_training.py  eval_grpo_checkpoint.ps1  eval_sft_checkpoint.ps1  run_agentic_ablation.py  run_ghidra_export.ps1  run_ghidra_export.sh  run_grpo_campaign_supervisor.ps1  run_grpo_experiment_batch.py  run_training_matrix.ps1  run_training_matrix.py  smoke_eval.sh  train_grpo.ps1  train_sft.ps1  verify_train_env.ps1
src/decomp_clarifier/: __init__.py  c_source.py  cli.py  doctor.py  logging.py  paths.py  (+1 more)
tests/: conftest.py
(+90 files in other folders)
